...
            contentPadding = PaddingValues(
                start = Dimens.sdp8,
                top = Dimens.sdp16,
                end = Dimens.sdp8,
                bottom = Dimens.sdp16
            ),
            modifier = Modifier.fillMaxWidth().testTag("loginButton")
        ) {
            Text(text = stringResource(Res.string.login_title), style = MaterialTheme.typography.h6)
        }

        Spacer(modifier = Modifier.height(Dimens.sdp16))

...
